--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,4 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+:root {
+  --bg: #fefae0;
+  --brown: #bc6c25;
+  --brown-light: #dda15e;
+  --green: #283618;
+  --green-light: #606c38;
+  --red: #d62828;
+}
 
 * {
   margin: 0px;
@@ -87,6 +96,19 @@ ul {
 }
 
 body {
-  font-family: 'Ubuntu', sans-serif;
+font-family: 'Press Start 2P', cursive;
+}
 
+.plain-text {
+  font-size: 14px;
+}
+
+.wrapper {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--bg);
 }
